--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,27 @@
-fastapi
-redis
-SQLAlchemy
-uvicorn
+altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+fastapi==0.115.12
+greenlet==3.2.1
+h11==0.16.0
+idna==3.10
+packaging==25.0
+pefile==2023.2.7
+pydantic==2.11.4
+pydantic_core==2.33.2
+python-multipart==0.0.20
+pywin32-ctypes==0.2.3
+redis==6.0.0
+requests==2.32.3
+setuptools==80.8.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.34.2
